--- a/tma/implementation/styles.css
+++ b/tma/implementation/styles.css
@@ -1,29 +1,8 @@
 
-#navcontainer ul {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	list-style-type: none;
+#map-canvas {
+	height: 200px;
 }
 
-#navcontainer a {
-	color: #000;
-	width: 100%;
-	display: block;
-	text-decoration: none;
-	padding: 3px 12px 3px 8px;
-	border-bottom: 1px solid #000;
-}
-
-#navcontainer li li a {
-	width: 100%;
-	display: block;
-	font-weight: lighter;
-	text-decoration: none;
-	padding: 3px 3px 3px 17px;
-	border-bottom: 1px solid #000;
-}
-
-#navcontainer a:hover {
-	background-color: #E8E8E8;
+address {
+	margin-top: 20px;
 }
